--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -5,61 +5,125 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".PlannerActivity">
 
-
+    <!-- Calendar View -->
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="406dp"
-        android:layout_height="360dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:paddingTop="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="spread"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_default="spread" />
+        app:layout_constraintBottom_toTopOf="@id/recyclerview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAppearance="@style/CustomCalendarTextStyle" />
 
-    <!-- Bottom Navigation Bar -->
-
+    <!-- RecyclerView for events -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="412dp"
-        android:layout_height="211dp"
-        android:layout_marginTop="3dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
+        app:layout_constraintBottom_toTopOf="@id/addButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Add Button -->
     <ImageButton
         android:id="@+id/addButton"
-        android:layout_width="61dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="373dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="96dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@android:drawable/ic_menu_add"
         android:backgroundTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="Add Event"
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview"
+        app:layout_constraintBottom_toTopOf="@id/mainMenu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/btm_nav"
-        android:layout_width="match_parent"
+    <!-- Bottom Menu Bar -->
+    <LinearLayout
+        android:id="@+id/mainMenu"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="2dp"
-        android:background="?android:attr/windowBackground"
-        app:itemIconSize="50dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="8dp"
+        android:weightSum="6"
+        android:background="#D17BFA"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addButton"
-        app:menu="@menu/bottom_nav_menu" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageButton
+            android:id="@+id/homeButton"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_home"
+            android:contentDescription="Home"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/planner"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_planner"
+            android:contentDescription="Planner"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/toDoList"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_todolist"
+            android:contentDescription="To-Do List"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/notes"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_notes"
+            android:contentDescription="Notes"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/studyTimer"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_studytimer"
+            android:contentDescription="Study Timer"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_settings"
+            android:contentDescription="Settings"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:background="@null"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
