--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -7,7 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".NotesActivity">
 
+    <!-- RecyclerView with constraints to avoid overlap -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/addButton"
+        app:layout_constraintBottom_toTopOf="@id/mainMenu"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Add Button in top-right corner -->
+    <ImageButton
+        android:id="@+id/addButton"
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:background="@android:drawable/ic_menu_add"
+        android:backgroundTint="@color/black"
+        android:contentDescription="Add Event"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp" />
 
     <!-- Bottom Menu Bar -->
     <LinearLayout
@@ -43,7 +64,6 @@
             android:padding="8dp"
             android:scaleType="centerInside"
             android:background="@null"/>
-
         <ImageButton
             android:id="@+id/toDoList"
             android:layout_width="0dp"
@@ -74,8 +94,6 @@
             android:padding="8dp"
             android:scaleType="centerInside"
             android:background="@null"/>
-
-
         <ImageButton
             android:id="@+id/settingsButton"
             android:layout_width="0dp"
