--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -27,26 +27,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#DDEEFF" />
+        android:layout_marginBottom="8dp" />
 
     <!-- Add Button -->
-    <ImageButton
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/ic_menu_add"
-        android:backgroundTint="@color/black"
-        android:contentDescription="Add Event"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview"
-        app:layout_constraintBottom_toTopOf="@id/mainMenu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 
 
     <!-- Bottom Menu Bar -->
+    <ImageButton
+        android:id="@+id/addButton"
+        android:layout_width="38dp"
+        android:layout_height="39dp"
+        android:background="@android:drawable/ic_menu_add"
+        android:backgroundTint="@color/black"
+        android:contentDescription="Add Event"
+        android:foregroundGravity="left"
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@id/mainMenu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.957"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview" />
+
     <LinearLayout
         android:id="@+id/mainMenu"
         android:layout_width="0dp"
