--- a/app/src/main/res/layout/add_event_dialog.xml
+++ b/app/src/main/res/layout/add_event_dialog.xml
@@ -16,7 +16,7 @@
 
 
     <EditText
-        android:id="@+id/EventTime"
+        android:id="@+id/eventTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
